<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daegyu@telelian.com">dghwang</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gole_action</depend>
  <depend>gole_action_interfaces</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
